# smarteducation_tasks_manager_api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  dev_loop.py  docker-compose.yml  pyproject.toml  pytest.ini
apps/core/: models.py
apps/core/management/commands/: seed_data.py
apps/tasks/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py
apps/users/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py
tests/integration/tasks/: test_tasks_api.py
tests/integration/users/: test_users_api.py
