[tool.poetry]
name = "smarteducation"
version = "1.0.0"
description = "Task Management System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
djangorestframework = "^3.16.1"
djangorestframework-simplejwt = "^5.5.1"
drf-spectacular = "^0.29.0"
psycopg2-binary = "^2.9.11"
python-decouple = "^3.8"
django-filter = "^25.2"
drf-nested-routers = "^0.95.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"
factory-boy = "^3.3.3"
faker = "^39.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
